--- a/index.html
+++ b/index.html
@@ -82,24 +82,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Suspension of disbelief</h4>
-                        <p class="text-muted">Third par from left</p>
+                        <h4 class="my-3">NA</h4>
+                        <p class="text-muted">Fourth par from left</p>
                     </div>
                     <div class="col-md-2">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Suspension of disbelief</h4>
-                        <p class="text-muted">Third par from left</p>
+                        <h4 class="my-3">NA</h4>
+                        <p class="text-muted">Fifth par from left</p>
                     </div>
                     <div class="col-md-2">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Suspension of disbelief</h4>
-                        <p class="text-muted">Third par from left</p>
+                        <h4 class="my-3">NA</h4>
+                        <p class="text-muted">Sixth par from left</p>
                     </div>
                     
                 </div>
