--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Monster Inc Echo Mount</h2>
                                     <p class="item-intro text-muted">In this project, I wanted to create an interesting mount for my amazon alexa dot. In doing so I decided to create a replica Scream Canister from Monsters Inc and with the help of some microcontrollers I was able to sync light and sounds.</p>
-                                    <video width="400" height="640" controls>
+                                    <video class = "img-fluid" controls>
                                         <source src="assets/img/portfolio/MINC.mp4" type="video/mp4">
                                       Your browser does not support the video tag.
                                       </video>
@@ -454,11 +454,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">EMG Animatronics Testing</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <video width="400" height="640" controls>
+                                    <video class="img-fluid" controls>
                                         <source src="assets/img/portfolio/EMG2.mp4" type="video/mp4">
                                       Your browser does not support the video tag.
                                       </video>
-                                      <video width="400" height="640" controls>
+                                      <video class="img-fluid" controls>
                                         <source src="assets/img/portfolio/EMG3.mp4" type="video/mp4" mute=TRUE>
                                       Your browser does not support the video tag.
                                       </video>
