--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="nav-item"><a class="nav-link" href="#page-top">Home</a>
+                <a class="nav-item"><a class="nav-link" href="#page-top"><b>Home</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#skillset">Skillset</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#education">education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#career">career</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skillset"><b>Skillset</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio"><b>Portfolio</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#education"><b>education</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#career"><b>career</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Hi, I'm Brennan!</div>
                 <div class="masthead-heading text-uppercase">Welcome to my work</div>
-                <h3 class="section-subheading text-muted">Site Currently Under Construction As I Migrate From My Old Portfolio</h3>
+                <h5 class="section-subheading text-yellow">Site Currently Under Construction As I Migrate From My Old Portfolio</h3>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#skillset">Tell Me More</a>
             </div>
         </header>
@@ -274,9 +274,9 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Let Me Be
+                                Allow Me To
                                 <br />
-                                A Part Of
+                                Be A Part Of
                                 <br />
                                 Your Story!
                             </h4>
@@ -345,7 +345,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Brennan Drake 2022</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -416,7 +416,7 @@
                                     <h2 class="text-uppercase">Mechanical Nano-Fiber Spinning Assembly</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Nano4.png" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>placeholder</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
@@ -453,15 +453,17 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">EMG Animatronics Testing</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <video class="img-fluid" controls>
-                                        <source src="assets/img/portfolio/EMG2.mp4" type="video/mp4">
-                                      Your browser does not support the video tag.
-                                      </video>
-                                      <video class="img-fluid" controls>
-                                        <source src="assets/img/portfolio/EMG3.mp4" type="video/mp4" mute=TRUE>
-                                      Your browser does not support the video tag.
-                                      </video>
+                                    <p class="item-intro text-muted">placeholder</p>
+                                    <div class="row img-flex">
+                                        <video class="float:left" controls>
+                                            <source src="assets/img/portfolio/EMG2.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                        </video>
+                                     <video class="float:left" controls>
+                                         <source src="assets/img/portfolio/EMG3.mp4" type="video/mp4">
+                                         Your browser does not support the video tag.
+                                        </video>
+                                    </div>
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
