Resume and Fixes
Removed some delete? areas as well as those still in non-english. Added resume section and formatted accordingly

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio"><b>Portfolio</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#education"><b>education</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#career"><b>career</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#resume"><b>resume</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
                     </ul>
                 </div>
@@ -59,7 +60,9 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Design</h4>
-                        <p class="text-muted">First Par from left</p>
+                        <p class="text-muted">Well versed in traditional drafting techinques as well as CAD programs.
+                            Experienced ranging from most to least in: Solidworks, Solidedge, Onshape, Catia, Autodesk Inventor
+                        </p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -67,23 +70,23 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Prototyping</h4>
-                        <p class="text-muted">Second Par from left</p>
+                        <p class="text-muted">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, print finishing, and eventual integration.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Suspension of disbelief</h4>
-                        <p class="text-muted">Third par from left</p>
+                        <h4 class="my-3">Screen Accuracy</h4>
+                        <p class="text-muted">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">NA</h4>
-                        <p class="text-muted">Fourth par from left</p>
+                        <h4 class="my-3">Project Management and Fulfillment</h4>
+                        <p class="text-muted">I find I am the most productive when I ride the wave of productivity project to project. I find that taking small breaks in a project can lead to better understanding of the scope and allow for some outside the box thinking. That being said, I work best when immersed in multiple projects at the same time.</p>
                     </div>
                     
                     
@@ -95,7 +98,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Delete?.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -235,7 +238,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Career</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -285,12 +288,24 @@
                 </ul>
             </div>
         </section>
+        <!-- Resume -->
+        <section id="resume">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Resume</h2>
+                    <br>
+                </div>
+              <body>
+                <iframe src="assets/Brennan_Drake_Resume_6-25-2022.pdf" width="100%" height="1000px">
+                </iframe>
+              </body>
+        </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Contact Me</h2>
+                    <h3 class="section-subheading text-white">I Will Get Back To You As Soon As I Can.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -337,7 +352,7 @@
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                     <!-- Submit Button-->
-                    <div class="text-center"><input type="submit">Send Message</button></div>
+                    <div class="text-center"><input type="submit"></button></div>
                 </form>
             </div>
         </section>
@@ -414,7 +429,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Mechanical Nano-Fiber Spinning Assembly</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted"></p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Nano4.png" alt="..." />
                                     <p>placeholder</p>
                                     <ul class="list-inline">
