--- a/index.html
+++ b/index.html
@@ -153,11 +153,13 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
+                                <div class="timeline-panel-pics">
+                                    <img class="img-fluid" src="assets/img/career/Flight2_cropped.jpg" alt="..." />
+                                </div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Flight Test Sortie</div>
+                                <div class="portfolio-caption-subheading text-muted">Professional</div>
                             </div>
                         </div>
                     </div>
@@ -515,14 +517,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <h2 class="text-uppercase">Flight Test</h2>
+                                    <p class="item-intro text-muted">Gulfstream Aerospace Summer 2022</p>
+                                    <img class="img-fluid" src="assets/img/career/FlightComp.png" alt="..." />
+                                    <p>In the summer of 2022 I was given the opportunity to work as a flight test engineer for a sortie of aircraft testing</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            NA
+                                            Observation and Note Taking
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
@@ -530,7 +532,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Academic
+                                            Professional
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
