--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">Place Holder</div>
+                                <div class="portfolio-caption-subheading text-muted">Place Holder</div>
                             </div>
                         </div>
                     </div>
@@ -188,8 +188,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">Place Holder</div>
+                                <div class="portfolio-caption-subheading text-muted">Place Holder</div>
                             </div>
                         </div>
                     </div>
@@ -470,30 +470,32 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">EMG Animatronics Testing</h2>
-                                    <p class="item-intro text-muted">placeholder</p>
-                                    <div class="row img-flex">
-                                        <video class="float:left" controls>
-                                            <source src="assets/img/portfolio/EMG2.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                        </video>
-                                     <video class="float:left" controls>
-                                         <source src="assets/img/portfolio/EMG3.mp4" type="video/mp4">
-                                         Your browser does not support the video tag.
-                                        </video>
+                                    <p class="item-intro text-muted"></p>
+                                    <div class="list-group-horizontal">
+                                        <div id="wrapper"> 
+                                            <video id="EMG2" width="400" height=auto controls="controls" > 
+                                                <source type="video/mp4" src="assets/img/portfolio/EMG2.mp4" /> 
+                                            </video>
+                                            <video id="EMG3" width="400" height=auto controls="controls" > 
+                                                <source type="video/mp4" src="assets/img/portfolio/EMG3.mp4" /> 
+                                            </video>
+                                            <div class="clear"></div> 
+                                        </div>
+                                        
                                     </div>
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>To Be Completed</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            NA
+                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
-                                            NA
+                                            MyoWare Muscle Sensor, Arduino Uno, CR10-Mini 3D Printer, Servos, Arduino IDE
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            NA
+                                            Hobby
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -557,9 +559,9 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">Place Holder</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Place Holder</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
@@ -596,9 +598,9 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">Place Holder</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Place Holder</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
