--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/career/HC2.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Place Holder</div>
-                                <div class="portfolio-caption-subheading text-muted">Place Holder</div>
+                                <div class="portfolio-caption-heading">Manufacturing Experienced</div>
+                                <div class="portfolio-caption-subheading text-muted">Heatcraft Refrigeration</div>
                             </div>
                         </div>
                     </div>
@@ -558,22 +558,24 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Place Holder</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Place Holder</p>
+                                    <h2 class="text-uppercase">Manufacturing Design</h2>
+                                    <p class="item-intro text-muted">Heatcraft Refrigeration Products</p>
+                                    <img class="img-fluid " src="assets/img/career/HC1.JPG" alt="..." />
+                                    <img class="img-fluid " src="assets/img/career/HC6.PNG" alt="..." />
+                                    <img class="img-fluid" src="assets/img/career/HC10.PNG" alt="..." />
+                                    <p>At Heatcraft Refrigeration Products, I was walked around and shown things that could be improved aroudn the plant. From there on, I worked with specific people on the floor, coworkers, our in plant machine shop, and outside fabricators to implement solutions to various problems or inefficiencies.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            NA
+                                            Design for manufacturing, iterative design, negotiation of quotes, interfacing with contractors, design for existing hardware/machinery.
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
-                                            NA
+                                            Solidedge, measuring tape and calipers, sketching tools, microsoft excel
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Academic
+                                            Professional
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
