--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="masthead-subheading">Hi, I'm Brennan!</div>
                 <div class="masthead-heading text-uppercase">Welcome to my work</div>
                 <h5 class="section-subheading text-yellow">Site Currently Under Construction As I Migrate From My Old Portfolio</h3>
+                <p><a href="https://sites.google.com/georgiasouthern.edu/brennan-drakes-e-portfolio/home?authuser=1" class="section-subheading text-yellow">Link To My Old Portfolio</a></p>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#skillset">Tell Me More</a>
             </div>
         </header>
@@ -173,7 +174,7 @@
                                 <img class="img-fluid" src="assets/img/career/HC2.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Manufacturing Experienced</div>
+                                <div class="portfolio-caption-heading">Manufacturing Experience</div>
                                 <div class="portfolio-caption-subheading text-muted">Heatcraft Refrigeration</div>
                             </div>
                         </div>
