Fixed Error added caption to pic

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <h5 class="section-subheading text-yellow">Site Currently Under Construction As I Migrate From My Old Portfolio</h3>
                 <p><a href="https://sites.google.com/georgiasouthern.edu/brennan-drakes-e-portfolio/home?authuser=1" class="section-subheading text-yellow">Link To My Old Portfolio</a></p>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#skillset">Tell Me More</a>
+                <div class="text-center parent">
+                    <h4 class="section-heading text-uppercase footer bottomimg">Photo Taken On Study Abroad in Romanian Underground Hydroelectric Plant</h2>
             </div>
         </header>
         <!-- Skillset-->
@@ -61,7 +63,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Design</h4>
-                        <p class="text-muted">Well versed in traditional drafting techinques as well as CAD programs.
+                        <p class="text-muted">Well versed in traditional drafting techniques as well as CAD programs.
                             Experienced ranging from most to least in: Solidworks, Solidedge, Onshape, Catia, Autodesk Inventor
                         </p>
                     </div>
