--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/EMG1.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Place Holder</div>
-                                <div class="portfolio-caption-subheading text-muted">EMG Animatronics Testing</div>
+                                <div class="portfolio-caption-heading">EMG Animatronics Testing</div>
+                                <div class="portfolio-caption-subheading text-muted">Hobby</div>
                             </div>
                         </div>
                     </div>
