--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="container">
                 <div class="masthead-subheading">Hi, I'm Brennan!</div>
                 <div class="masthead-heading text-uppercase">Welcome to my work</div>
-                <h5 class="section-subheading text-yellow">Site Currently Under Construction As I Migrate From My Old Portfolio</h3>
-                <p><a href="https://sites.google.com/georgiasouthern.edu/brennan-drakes-e-portfolio/home?authuser=1" class="section-subheading text-yellow">Link To My Old Portfolio</a></p>
+                <h5 class="section-subheading text-yellow">Site Currently Under Construction</h3>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#skillset">Tell Me More</a>
+                <div></div>
                 <div class="text-center parent">
                     <h4 class="section-heading text-uppercase footer bottomimg">Photo Taken On Study Abroad in Romanian Underground Hydroelectric Plant</h2>
             </div>
