--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Turtlebot.PNG" alt="..." />
+                                <img class="img-fluid" src="assets/img/Turtlebot/final.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">RFID Landmarking in SLAM for Autonmous Robotics</div>
+                                <div class="portfolio-caption-heading">RFID Landmarking in SLAM for Autonomous Robotics</div>
                                 <div class="portfolio-caption-subheading text-muted">Academic</div>
                             </div>
                         </div>
@@ -480,33 +480,24 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">EMG Animatronics Testing</h2>
+                                    <h2 class="text-uppercase">RFID SLAM With Turtlebot3</h2>
                                     <p class="item-intro text-muted"></p>
-                                    <div class="list-group-horizontal">
-                                        <div id="wrapper"> 
-                                            <video id="EMG2" width="400" height=auto controls="controls" > 
-                                                <source type="video/mp4" src="assets/img/portfolio/EMG2.mp4" /> 
-                                            </video>
-                                            <video id="EMG3" width="400" height=auto controls="controls" > 
-                                                <source type="video/mp4" src="assets/img/portfolio/EMG3.mp4" /> 
-                                            </video>
-                                            <div class="clear"></div> 
-                                        </div>
-                                        
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/physical_turtlebot1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/physical_turtlebot3.jpg" alt="..." />   
                                     </div>
-                                    <p>To Be Completed</p>
+                                    <p>This project is in progress with thesis to be completed in April of 2023</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration
+                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration, SLAM Algorithm integration with GMapping (Python), Soldering, Linux Programming and Troubleshooting
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
-                                            MyoWare Muscle Sensor, Arduino Uno, CR10-Mini 3D Printer, Servos, Arduino IDE
+                                            Turtlebot3 by ROBOTIS, PN5180 NFC Readers, Arduino Uno, ROS Noetic, Soldering Iron, OnShape CAD Software, Logic Level Shifters, various fasteners, wire, and solder
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Hobby
+                                            Academic
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
