--- a/index.html
+++ b/index.html
@@ -486,6 +486,11 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/physical_turtlebot3.jpg" alt="..." />   
                                     </div>
                                     <p>This project is in progress with thesis to be completed in April of 2023</p>
+                                    <p> The goal of my research is to implement static unique landmarks in a simulataneous localization process through the use of off the shelf RFID (NFC) readers and tags. Specifically I am using PN5180 readers and plan to fuse lidar data and these landmarks
+                                        into an existing SLAM package such as GMapping with a Turtlebot3. At the moment I have conducted literature search and physical construction of the robot, I am currently constructing my control circuits and am planning on implementing glass fast-blow fuses
+                                        for caution. The scope of this project is for use in environments such as warehouses and stores where isles and shelves are repeating thus being prone to wrong data association. Not only will unique RFID tags aid in localization, but will prove to be useful
+                                        for product tracking and planogram compliance as well.
+                                    </p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
