--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/Turtlebot/final.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/Turtlebot/10-25-22/Final.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">RFID Landmarking in SLAM for Autonomous Robotics</div>
@@ -486,8 +486,12 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">RFID SLAM With Turtlebot3</h2>
                                     <p class="item-intro text-muted"></p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/physical_turtlebot1.jpg" alt="..." />
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/physical_turtlebot3.jpg" alt="..." />   
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/10-25-22/1.jpg" alt="..." />
+                                    <p>Full Scope 10-25-2022</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/10-25-22/2.jpg" alt="..." />   
+                                    <p>Fuse Box Circuit</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/10-25-22/3.jpg" alt="..." /> 
+                                    <p>Arduino Wiring</p>
                                     </div>
                                     <p>This project is in progress with thesis to be completed in April of 2023</p>
                                     <p> The goal of my research is to implement static unique landmarks in a simulataneous localization process through the use of off the shelf RFID (NFC) readers and tags. Specifically I am using PN5180 readers and plan to fuse lidar data and these landmarks
