--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-vr-cardboard fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Immersion</h4>
                         <p class="text-muted">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
