--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-laptop-code fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Design</h4>
                         <p class="text-muted">Well versed in traditional drafting techniques as well as CAD programs.
@@ -82,7 +82,7 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Prototyping</h4>
                         <p class="text-muted">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, print finishing, and eventual integration.</p>
@@ -98,7 +98,7 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-list-check fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Project Management and Fulfillment</h4>
                         <p class="text-muted">I am experienced in following a project from formulation and brainstorming with others all the way to implementation. I believe in design for future-proofing. </p>
