--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="masthead-subheading">Hi, I'm Brennan!</div>
                 <div class="masthead-heading text-uppercase">Welcome to my work</div>
-                <h5 class="section-subheading text-yellow">Site Currently Under Construction</h3>
+                <!-- <h5 class="section-subheading text-yellow">Site Currently Under Construction</h3> -->
                 <a class="btn btn-primary btn-xl text-uppercase" href="#skillset">Tell Me More</a>
                 <div></div>
             <div class="wrapper">
@@ -297,14 +297,14 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Allow Me To
-                                <br />
-                                Be A Part Of
-                                <br />
-                                Your Story!
-                            </h4>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/Wheelme/wheelme.png" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>May 2023 - Present</h4>
+                                <h4 class="subheading">Robotics Deployment Engineer</h4>
+                                <h4 class="subheading">Wheel.me</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Wheel.me is the first robotics company that produces a product allowing customers to turn existing infrastructure into an autonomous mobile robot. As a deployment engineer, my job is to install our solution in customer sites and to be the final point in the feedback loop for development of the product.</p></div>
                         </div>
                     </li>
                 </ul>
