--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                   <span><i class="fab fa-github"></i></span>
                 </a>
               </div>
-              <div class="text-center parent">
-                <h4 class="section-heading text-uppercase footer bottomimg">Photo Taken On Study Abroad in Romanian Underground Hydroelectric Plant</h2>
-              </div>
+            <div class="text-center parent">
+                <h4 class="section-heading text-uppercase img_footer bottomimg">Photo Taken On Study Abroad in Romanian Underground Hydroelectric Plant</h2>
+            </div>
         </header>
         <!-- Skillset-->
         <section class="page-section" id="skillset">
-            <div class="container">
+            <div class="container transbox">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Skillset</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h3 class="section-subheading text-white"></h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-3">
@@ -74,8 +74,8 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop-code fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Design</h4>
-                        <p class="text-muted">Well versed in traditional drafting techniques as well as CAD programs.
+                        <h4 class="my-3 text-white">Design</h4>
+                        <p class="text-white">Well versed in traditional drafting techniques as well as CAD programs.
                             Experienced ranging from most to least in: Solidworks, Solidedge, Onshape, Catia, Autodesk Inventor.
                         </p>
                     </div>
@@ -84,28 +84,31 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Prototyping</h4>
-                        <p class="text-muted">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, print finishing, and eventual integration.</p>
+                        <h4 class="my-3 text-white">Prototyping</h4>
+                        <p class="text-white">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, print finishing, and eventual integration.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-vr-cardboard fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Immersion</h4>
-                        <p class="text-muted">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
+                        <h4 class="my-3 text-white">Immersion</h4>
+                        <p class="text-white">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-list-check fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Project Management and Fulfillment</h4>
-                        <p class="text-muted">I am experienced in following a project from formulation and brainstorming with others all the way to implementation. I believe in design for future-proofing. </p>
+                        <h4 class="my-3 text-white">Project Management and Fulfillment</h4>
+                        <p class="text-white">I am experienced in following a project from formulation and brainstorming with others all the way to implementation. I believe in design for future-proofing. </p>
                     </div>
                     
                     
                 </div>
+            </div>
+            <div class="text-center parent">
+                <h4 class="section-heading text-uppercase img_footer ">Photo Taken Working as a deployment engineer in León Mexico</h4>
             </div>
         </section>
         <!-- Portfolio Grid-->
