--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Monster Inc Echo Mount</h2>
-                                    <p class="item-intro text-muted">In this project, I wanted to create an interesting mount for my amazon alexa dot. In doing so I decided to create a replica Scream Canister from Monsters Inc and with the help of some microcontrollers I was able to sync light and sounds.</p>
+                                    <h2 class="text-uppercase">Monsters, Inc Echo Mount</h2>
+                                    <p class="item-intro text-muted">In this project, I wanted to create an interesting mount for my amazon alexa dot. In doing so, I decided to create a replica Scream Canister from Monsters Inc and with the help of some microcontrollers I was able to sync light and sounds.</p>
                                     <video class = "img-fluid" controls>
                                         <source src="assets/img/portfolio/MINC.mp4" type="video/mp4">
                                       Your browser does not support the video tag.
