Adding Research Section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#skillset"><b>Skillset</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio"><b>Portfolio</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#education"><b>education</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#career"><b>career</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#resume"><b>resume</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#education"><b>Education</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#research"><b>Research</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#career"><b>Career</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#resume"><b>Resume</b></a></li>
                     </ul>
                 </div>
             </div>
@@ -220,7 +220,7 @@
             </div>
         </section>
         <!-- Education-->
-        <section class="page-section bg-light" id="education">
+        <section class="page-section" id="education">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Education</h2>
@@ -259,6 +259,36 @@
                 </div>
             -->
             </div>
+        </section>
+        <!-- Research-->
+        <section id="research" class="page-section bg-light">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Undergraduate Thesis</h2>
+                    <br>
+                </div>
+                <div class="container">
+                    <div class="text-center">
+                        <p> During my undergrad at Georgia Southern University, with the help of my faculty mentor Dr. Alba Flores, I independently pursued robotics 
+                            research. In reflection, my work was a tremendous amount of self study and literature review but was fundamental to fostering my passion
+                            for robotics and in giving me a solid foundation for growth. Through published works, online resources, and textbooks, I was able to teach 
+                            myself about ROS1 and ROS2 architecture, how a complex system can be discretized, and extensively about Simultaneous Localization and Mapping.
+                        </p><p>
+                            As can be seen in my work below, using a Turtlebot3 system, I fabricated an experimental assembly to integrate PN5180 NFC/RFID reader data into
+                            the turtlebot's control system. By the conclusion of my studies, I had completed the experimental assembly with detected RFID tag IDs 
+                            being published to a ROS topic, and had validated this collection with a small script of motion prompted by specific IDs. I would like to
+                            perform more work focused on this field, pertaining to visual SLAM methods, integration of LLM and object recognition, and higher level AI and
+                            and machine learning topics.
+                        </p><p>
+                            Photos and videos of the project can be seen in the portfolio section above.
+                        </p>
+                        
+                    </div>
+                </div>
+              <body>
+                <iframe src="assets/Undergrad_Thesis.pdf" width="100%" height="1000px">
+                </iframe>
+              </body>
         </section>
         <!-- Career-->
         <section class="page-section" id="career">
@@ -309,7 +339,7 @@
                                 <h4 class="subheading">Robotics Deployment Engineer</h4>
                                 <h4 class="subheading">Wheel.me</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Wheel.me is the first robotics company that produces a product allowing customers to turn existing infrastructure into an autonomous mobile robot. As a deployment engineer, my job is to install our solution in customer sites and to be the final point in the feedback loop for development of the product.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Wheel.me is the first robotics company that produces a product allowing customers to turn existing infrastructure into an autonomous mobile robot. As a deployment engineer, my role is to install our solution in customer sites and to be the final point in the feedback loop for development of the product.</p></div>
                         </div>
                     </li>
                 </ul>
@@ -333,8 +363,6 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; Brennan Drake 2022</div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                     </div>
                 </div>
             </div>
