--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                             <i class="fas fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-white">Prototyping</h4>
-                        <p class="text-white">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, print finishing, and eventual integration.</p>
+                        <p class="text-white">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, 
+                                              print finishing, and eventual integration.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -93,7 +94,8 @@
                             <i class="fas fa-vr-cardboard fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-white">Immersion</h4>
-                        <p class="text-white">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
+                        <p class="text-white">In my hobbywork the goal is identical screen accuracy. In my career, this is seen fulfilled through leaving 
+                                              no stone unturned and ensuring that all facets of a project are given the proper time and care.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -101,7 +103,8 @@
                             <i class="fas fa-list-check fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-white">Project Management and Fulfillment</h4>
-                        <p class="text-white">I am experienced in following a project from formulation and brainstorming with others all the way to implementation. I believe in design for future-proofing. </p>
+                        <p class="text-white">I am experienced in following a project from formulation and brainstorming with others all the way to implementation. 
+                                              I believe in design for future-proofing. </p>
                     </div>
                     
                     
@@ -384,8 +387,10 @@
                                         <source src="assets/img/portfolio/MINC.mp4" type="video/mp4">
                                       Your browser does not support the video tag.
                                       </video>
-                                    <p>This project tested my abilities in circuit design and allowed me to grow in my coding skills as well. I prototyped my circuit in EasyEDA, physically using cardboard and solder, and then finally with a fabricated pcb from JLC Pcb.
-                                    I utilized a raspbery pi zero w for the brains and an array of transistors to allow for staggered lighting of the LEDs in sync with an audio file I extracted from Monster's University.
+                                    <p>This project tested my abilities in circuit design and allowed me to grow in my coding skills as well. 
+                                       I prototyped my circuit in EasyEDA, physically using cardboard and solder, and then finally with a fabricated pcb from JLC Pcb.
+                                       I utilized a raspbery pi zero w for the brains and an array of transistors to allow for staggered lighting of the LEDs in sync with 
+                                       an audio file I extracted from Monster's University.
                                     </p>
                                     <ul class="list-inline">
                                         <li>
@@ -394,7 +399,8 @@
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
-                                            CR-10 Mini 3D printer, OnShape CAD Software (Free to college and highschool students), EasyEDA circuit design, Spyder Python IDE, Adobe Audition, Soldering Iron, Sanding Tools, Bondo, and Spraypaint
+                                            CR-10 Mini 3D printer, OnShape CAD Software (Free to college and highschool students), EasyEDA circuit design, 
+                                            Spyder Python IDE, Adobe Audition, Soldering Iron, Sanding Tools, Bondo, and Spraypaint
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
@@ -461,6 +467,23 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
+                                    <h2 class="text-uppercase">Thesis Document Found In "Research" Section</h2>
+                                    <h2></h2>
+                                    <p> At Georgia Southern University, I attended to my Bachelors in Mechanical Engineering studies while a member of the Honors college. As a member
+                                        I pursued undergraduate research focusing on robotics. I had previously become interested in the Robot Operating System, and sought
+                                        to explore the use of static RFID/NFC landmarks in a Simultaneous Localization and Mapping process.
+                                    </p>
+                                    <p>
+                                        As can be seen in my paper below, the entent of my work at the time was the creation of the experimental assembly and a comprehensive
+                                        literature search. The focus on this search was narrowed on lidar based SLAM and integrating PN5180 reader RFID data into existing
+                                        packages such as GMapping.
+                                    </p>
+                                    <p>
+                                        The experimental assembly was fabricated to integrate with a Turtlebot3 "Burger" configuration. This assembly included structures
+                                        modeled after the plates used on the turtlebot and 3d printed, logic level conversion circuits fabricated by hand on protoboards,
+                                        a fuse assembly, an Arduino Uno, a step-down converter to power the assembly from the same battery as the robot, and a fuse cradle
+                                        for circuit protection.
+                                    </p>
                                     <h2 class="text-uppercase">RFID SLAM With Turtlebot3</h2>
                                     <p class="item-intro text-muted"></p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/11-2-22/1.jpg" alt="..." />
@@ -468,20 +491,16 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Turtlebot/10-25-22/3.jpg" alt="..." /> 
                                     <p>Arduino Wiring</p>
                                     </div>
-                                    <p>This project is in progress with thesis to be completed in April of 2023</p>
-                                    <p> The goal of my research is to implement static unique landmarks in a simulataneous localization process through the use of off the shelf RFID (NFC) readers and tags. Specifically I am using PN5180 readers and plan to fuse lidar data and these landmarks
-                                        into an existing SLAM package such as GMapping with a Turtlebot3. At the moment I have conducted literature search and physical construction of the robot, I am currently constructing my control circuits and am planning on implementing glass fast-blow fuses
-                                        for caution. The scope of this project is for use in environments such as warehouses and stores where isles and shelves are repeating thus being prone to wrong data association. Not only will unique RFID tags aid in localization, but will prove to be useful
-                                        for product tracking and planogram compliance as well.
-                                    </p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration, SLAM Algorithm integration with GMapping (Python), Soldering, Linux Programming and Troubleshooting
+                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration, SLAM Algorithm integration with GMapping (Python), 
+                                            Soldering, Linux Programming and Troubleshooting
                                         </li>
                                         <li>
                                             <strong>Tools and Software:</strong>
-                                            Turtlebot3 by ROBOTIS, PN5180 NFC Readers, Arduino Uno, ROS Noetic, Soldering Iron, OnShape CAD Software, Logic Level Shifters, various fasteners, wire, and solder
+                                            Turtlebot3 by ROBOTIS, PN5180 NFC Readers, Arduino Uno, ROS Noetic, Soldering Iron, OnShape CAD Software, Logic Level Shifters, 
+                                            various fasteners, wire, and solder
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
@@ -553,7 +572,9 @@
                                     <img class="img-fluid " src="assets/img/career/HC1.JPG" alt="..." />
                                     <img class="img-fluid " src="assets/img/career/HC6.PNG" alt="..." />
                                     <img class="img-fluid" src="assets/img/career/HC10.PNG" alt="..." />
-                                    <p>At Heatcraft Refrigeration Products, I was walked around and shown things that could be improved around the plant. From there on, I worked with specific people on the floor, coworkers, our in plant machine shop, and outside fabricators to implement solutions to various problems or inefficiencies.</p>
+                                    <p>At Heatcraft Refrigeration Products, I was walked around and shown things that could be improved around the plant. From there on, 
+                                        I worked with specific people on the floor, coworkers, our in plant machine shop, and outside fabricators to implement solutions 
+                                        to various problems or inefficiencies.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
