--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <i class="fas fa-laptop-code fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-white">Design</h4>
-                        <p class="text-white">Well versed in traditional drafting techniques as well as CAD programs.
+                        <p class="text-white">Proficient in drafting and CAD Design.
                             Experienced ranging from most to least in: Solidworks, Solidedge, Onshape, Catia, Autodesk Inventor.
                         </p>
                     </div>
@@ -85,8 +85,7 @@
                             <i class="fas fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-white">Prototyping</h4>
-                        <p class="text-white">In college I found myself becoming a maker. I am a hobbist 3D printer and with that comes iterating and rapid prototyping, 
-                                              print finishing, and eventual integration.</p>
+                        <p class="text-white">Skilled in rapid prototyping with additive manufacturing, machine tools, and electrical circuit prototyping and fabrication</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
