--- a/index.html
+++ b/index.html
@@ -378,33 +378,28 @@ layout:  blank
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">EMG Animatronics Testing</h2>
+                                    <h2 class="text-uppercase">Autonomous Elephant</h2>
                                     <p class="item-intro text-muted"></p>
                                     <div class="list-group-horizontal">
-                                        <div id="wrapper"> 
-                                            <video id="EMG2" width="400" height=auto controls="controls" > 
-                                                <source type="video/mp4" src="assets/img/portfolio/EMG2.mp4" /> 
-                                            </video>
-                                            <video id="EMG3" width="400" height=auto controls="controls" > 
-                                                <source type="video/mp4" src="assets/img/portfolio/EMG3.mp4" /> 
-                                            </video>
+                                        <div id="row justify-content-center">
+                                            <div class="video-wrapper">
+                                                <video id="elephant" controls>
+                                                    <source src="assets/img/portfolio/elephant2.mp4" type="video/mp4" />
+                                                </video>
+                                            </div>
+                                            <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/elephant_platform.png" alt="..." />
                                             <div class="clear"></div> 
                                         </div>
-                                        
                                     </div>
-                                    <p>To Be Completed</p>
+                                    <p>In the fall of 2024, wheel.me (with our tagline of "Autonomous Anything") partnered with two artists: Steve and Dorota Coy to make the world's first fully autonomous amr elephant. In this project, I designed the t-slot extrusion frame which we mounted our robots to and the elephant to. In addition, I remotely piloted the robot using basic ros topic publishing to maintain the disco-ball effect and when later showcasing in a fully lit area, I calibrated, mapped, and set the system up for autonomous navigation.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Skills Used Most:</strong>
-                                            Arduino coding, 3D Printing, CAD Design (Solidworks), GPIO integration
-                                        </li>
-                                        <li>
-                                            <strong>Tools and Software:</strong>
-                                            MyoWare Muscle Sensor, Arduino Uno, CR10-Mini 3D Printer, Servos, Arduino IDE
+                                            Material Sourcing, CAD Design, ROS CLI operation, entertainment puppeteering
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Hobby
+                                            Professional
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
